# akochan-reviewer-gui

./: .gitignore  akochan-reviewer-gui.py  build.bat  pyproject.toml  readme.md
