[tool.poetry]
name = "akochan-reviewer-gui"
version = "0.1.0"
description = ""
authors = ["Nesswit <rishubil@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Gooey = "^1.0.8"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
